# AutoRep

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/: config.h.in
lib/: CMakeLists.txt
lib/qcustomplot/: CMakeLists.txt
lib/qtpropertybrowser/: CMakeLists.txt  customdoublespinbox.cpp  customdoublespinbox.h  custompropertyeditor.cpp  custompropertyeditor.h  customvariantpropertymanager.cpp  customvariantpropertymanager.h  qteditorfactory.cpp  qttreepropertybrowser.cpp  qttreepropertybrowser.h
lib/testlab/: CMakeLists.txt  common.h
scripts/: archive.sh  installTestlab.sh
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  constants.h  fileutility.cpp  fileutility.h  mathutility.cpp  mathutility.h  reportdefaults.cpp  reportdefaults.h  reportdocument.cpp  reportdocument.h  reportinterface.h  reportitem.cpp  reportitem.h  reportsettings.cpp  reportsettings.h  reporttextengine.cpp  reporttextengine.h  reporttextparser.cpp  reporttextparser.h  session.cpp  session.h
src/frontend/: CMakeLists.txt  customlineedit.cpp  customlineedit.h  customplot.cpp  customplot.h  customstatusbar.cpp  customstatusbar.h  customtable.cpp  customtable.h  customtabwidget.cpp  customtabwidget.h  geometryview.cpp  geometryview.h  graphreportsceneitem.cpp  graphreportsceneitem.h  mainwindow.cpp  mainwindow.h  modereportsceneitem.cpp  modereportsceneitem.h  reportdataeditor.cpp  reportdataeditor.h  reportdatamanager.cpp  reportdatamanager.h  reportdesigner.cpp  reportdesigner.h  reportdocument.cpp  reportdocument.h  reporteditor.cpp  reporteditor.h  reportelement.cpp  reportelement.h  reportitem.cpp  reportitem.h  reportpageeditor.cpp  reportpageeditor.h  reportpageview.cpp  reportpageview.h  reportpropertyeditor.cpp  reportpropertyeditor.h  reportsceneitem.cpp  (+9 more)
tests/: CMakeLists.txt
tests/testfrontend/: CMakeLists.txt  testfrontend.cpp  testfrontend.h
